--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.5.1",
     "@mui/material": "^5.5.1",
+    "@types/js-yaml": "^4.0.5",
+    "js-yaml": "^4.1.0",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
