--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "js-yaml": "^4.1.0",
     "next": "12.1.0",
     "react": "17.0.2",
+    "react-circular-progressbar": "^2.0.4",
     "react-dom": "17.0.2",
     "react-parallax": "^3.3.0"
   },
