--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "17.0.2",
     "react-circular-progressbar": "^2.0.4",
     "react-dom": "17.0.2",
+    "react-material-ui-carousel": "^3.4.2",
     "react-parallax": "^3.3.0"
   },
   "devDependencies": {
